# adapt

./: .gitignore  Cargo.toml  README.md  go.mod  main.go
completions/: _adapt  adapt.bash
src/: apt.rs  cli.rs  flatpak.rs  main.rs
