[package]
name = "adapt"
version = "0.1.0"
edition = "2021"
authors = ["You"]
description = "A paru-like wrapper for apt"
license = "Unlicense"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
